<resources>
    <string name="app_name">MoviesManager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="movie_list_label">Filmes</string>
    <string name="movie_detail_label">Detalhes</string>
    <string name="previous">Previous</string>

    <string name="movie_list_title">Lista de Filmes</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_item_title_placeholder">Placeholder</string>
    <string name="movie_detail_studio_label">Estudio:</string>
    <string name="movie_detail_release_date_label">Lançamento:</string>
    <string name="movie_detail_duration_label">Duração:</string>
    <string name="movie_detail_genre_label">Gênero:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_movie_name_hint">Filme</string>
    <string name="add_movie_release_date_hint">Lançamento (yyyy-mm-dd)</string>
    <string name="add_movie_studio_hint">Estúdio/Produtora</string>
    <string name="add_movie_duration_hint">Duração</string>
    <string name="add_movie_button_label">Adicionar</string>
    <string name="menu_edit_item">Editar</string>
    <string name="menu_delete_item">Deletar</string>
    <string name="rate_movie_button_label">Avaliar</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="rate">Avaliação</string>
    <string name="rate_movie_hint">Nota</string>
    <string name="movie_detail_rate_label">Avaliação:</string>
    <string name="movie_detail_watched_label">Ja assistido!</string>
</resources>