<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/add_movie_name_hint"
        android:inputType="text" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <EditText
        android:id="@+id/add_movie_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_movie_release_date_hint"
        android:inputType="date" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <EditText
        android:id="@+id/add_movie_studio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_movie_studio_hint"
        android:inputType="text" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <EditText
        android:id="@+id/add_movie_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_movie_duration_hint"
        android:inputType="numberSigned" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <Spinner
        android:id="@+id/add_movie_genres"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/add_movie_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/add_movie_button_label" />

</LinearLayout>