<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_base_margin"
    tools:context=".presentation.movies.views.MovieDetailFragment">

    <TextView
        android:id="@+id/movie_detail_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@tools:sample/lorem[3]"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_release_date_label"
            android:textSize="16sp" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_detail_release_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@tools:sample/lorem"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_studio_label"
            android:textSize="16sp" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_detail_studio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@tools:sample/lorem[0]"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_duration_label"
            android:textSize="16sp" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_detail_duration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@tools:sample/lorem[0]"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_genre_label"
            android:textSize="16sp" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_detail_genre_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@tools:sample/lorem[0]"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>